--- a/src/app/modules/employeemodule/managementexist/managementexist.component.html
+++ b/src/app/modules/employeemodule/managementexist/managementexist.component.html
@@ -78,13 +78,13 @@
             </nb-radio-group>
           </div>
         </div>
-
-        <div class="form-group row">
+         <div class="form-group row">
           <div class="col-md-4" style="display: flex;align-items:center">
             <label for="">Upload Employee CSV File</label>
+            <label for="">Employee Master</label>
           </div>
           <div class="col-md-8 col-xxl-8 ">
-            <div style="display: flex;flex-direction: row;">
+            <div style="display: flex;flex-direction: row;" *ngIf="uploadOption == 1">
               <div>
                 <ngx-file-upload   class="form-control" >
                 </ngx-file-upload>
@@ -93,9 +93,11 @@
                 <img (click)="downloadSampleFile()" style="height: 20px; margin-right: 10px;cursor: pointer;" src="assets/icons/download.jpg" alt=""><span
                   style="color: blue;">Download Sample file</span>
               </div>
+             
             </div>
-
-
+          
+            <ngx-employee-master-search *ngIf="uploadOption == 2" (masterSubmitted)="getSelectedEmployee($event)" [allowmultipleselection]="allowmultipleselection" [selectionHeader]="selectionHeader" [addbtnText]="addbtnText"></ngx-employee-master-search>
+     
           </div>
         </div>
         <div style="border-bottom: 0.800000011920929px solid #CED4DA;padding-bottom: 5px;"></div>
