--- a/src/app/modules/career-succession/talent-pool/talent-pool.component.html
+++ b/src/app/modules/career-succession/talent-pool/talent-pool.component.html
@@ -57,8 +57,8 @@
 </div>
 
 
-<div *ngIf="allTalentPool.length > 0 && newPool == false">
-      <nb-card *ngFor="let pool of allTalentPool" class="cardTitle">
+<div *ngIf="allTalentPools.length > 0 && newPool == false">
+      <nb-card *ngFor="let pool of allTalentPools" class="cardTitle">
         <nb-card-header>
           <div style="display: flex; flex-direction: row; justify-content: space-between;">
             <div>
