--- a/src/app/modules/loan/loan-request/loan-request.component.html
+++ b/src/app/modules/loan/loan-request/loan-request.component.html
@@ -159,7 +159,7 @@
 
                   <div class="col-sm-6">
                     <textarea name="justification" #justification="ngModel" [(ngModel)]="loanModel.justification" cols="60" rows="10"></textarea>
-                    <ngx-wysisyg-input [(value)]="loanModel.justification" style="padding-left: -10px;" ></ngx-wysisyg-input>
+                    <!-- <ngx-wysisyg-input [(value)]="loanModel.justification" style="padding-left: -10px;" ></ngx-wysisyg-input> -->
                   </div>
                 </div>
 
