--- a/src/app/modules/employeemodule/managementexist/managementexist.component.html
+++ b/src/app/modules/employeemodule/managementexist/managementexist.component.html
@@ -80,8 +80,8 @@
         </div>
          <div class="form-group row">
           <div class="col-md-4" style="display: flex;align-items:center">
-            <label for="">Upload Employee CSV File</label>
-            <label for="">Employee Master</label>
+            <label for="" *ngIf="uploadOption == 1">Upload Employee CSV File</label>
+            <label for="" *ngIf="uploadOption == 2">Employee Master</label>
           </div>
           <div class="col-md-8 col-xxl-8 ">
             <div style="display: flex;flex-direction: row;" *ngIf="uploadOption == 1">
