--- a/src/app/modules/employeemodule/managementexist/managementexist.component.html
+++ b/src/app/modules/employeemodule/managementexist/managementexist.component.html
@@ -102,7 +102,7 @@
         </div>
         <div style="border-bottom: 0.800000011920929px solid #CED4DA;padding-bottom: 5px;"></div>
 <div style="padding:5px"></div>
-        <div class="form-group row">
+        <!-- <div class="form-group row">
           <div class="col-md-4" style="display: flex;align-items:center">
             <label for="">Upload Supporting Document</label>
           </div>
@@ -119,14 +119,14 @@
 
 
           </div>
-        </div>
+        </div> -->
 
 
         <div class="form-group row">
           <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Additional comment</label>
           <div class="col-sm-8">
 
-            <textarea rows="5" nbInput fullWidth placeholder="Enter Additional comment here"
+            <textarea id="comment" name="comment" [(ngModel)]="RetirmentBody.comment" #comment="ngModel" rows="5" nbInput fullWidth placeholder="Enter Additional comment here"
                name="AdditionalComment" required></textarea>
 
           </div>
@@ -134,10 +134,12 @@
         </div>
 
         <div class="row">
-          <div class="col-sm-4 col-form-label listsubheader"></div>
-          <div class="col-sm-8" style=" display: flex;justify-content: center; margin-top: 3rem;margin-bottom: 2rem;">
 
-            <button nbButton status="primary" style="display: flex; justify-content: center;">Proceed</button>
+          <div class="offset-sm-4 col-sm-8" style=" display: flex;justify-content: center; margin-top: 3rem;margin-bottom: 2rem;">
+
+            <ngx-loadable-button [loading]="loading" [disabled]="exitForm.invalid" (click)="submitRetirement()" >
+              Submit
+            </ngx-loadable-button>  
           </div>
 
         </div>
