--- a/src/app/modules/career-succession/talent-pool/talent-pool.component.html
+++ b/src/app/modules/career-succession/talent-pool/talent-pool.component.html
@@ -72,7 +72,7 @@
               <span class="actions">
                 <a href="javascript:void(0);" (click)="editPool(pool.id)" style="padding: 10px;">Edit</a>
                 <a [routerLink]="['../talentpool', pool.id]">View</a>
-                <a style="padding: 10px; color:#EB5757;" href="javascript:void(0);" (click)="deletePool(pool.id)">Delete</a>
+                <a style="padding: 10px; color:#EB5757;" href="javascript:void(0);" (click)="deleteTalentPool(pool.id)">Delete</a>
               </span>
             </div>
           </div>
