--- a/src/app/modules/employeemodule/promotion/promotion.component.html
+++ b/src/app/modules/employeemodule/promotion/promotion.component.html
@@ -74,11 +74,10 @@
           <div *ngIf="promotionTargetId.errors.required">Job Title is required</div>
         </div>
         </div>
-        <div class="form-group row" >
-          <div class="col">
+        <div class="col-sm-12 form-group" >     
             <label>Comment:</label>
             <textarea nbInput fullWidth rows="5" style="padding-left: -10px;" [(ngModel)]="gOptions.comments" #comments="ngModel" name="comments" id="comments"></textarea>
-          </div>
+       
         </div>
         <div class="col-sm-12 form-group">
           <label for="Employee Name" style="font-size: small;font-weight: bold;">Employee:</label>
